traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:5: error: '(' expected but identifier found.
  while y!=
        ^